# poetry-cython-example

./: build.py  pyproject.toml
poetry_cython_example/: __init__.py
