[tool.poetry]
name = "poetry-cython-example"
version = "0.2.0"
description = ""
authors = ["ensky0 <ensky0@gmail.com>"]
packages = [{ include = "poetry_cython_example" }]
include = [{ path = "poetry_cython_example/**/*.so", format = "wheel" }]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core", "setuptools", "cython"]
build-backend = "poetry.core.masonry.api"
